--- a/extension-manifest-v2/_locales/de/messages.json
+++ b/extension-manifest-v2/_locales/de/messages.json
@@ -22,17 +22,11 @@
       }
     }
   },
-  "ad": {
-    "message": "Werbung"
-  },
   "ad_blocking": {
     "message": "Werbeblocker"
   },
   "additional_permissions_required": {
     "message": "Zusätzliche Berechtigungen erforderlich"
-  },
-  "ads": {
-    "message": "Werbungen"
   },
   "ads___onboarding": {
     "message": "Werbungen"
@@ -92,6 +86,9 @@
   },
   "all_popups": {
     "message": "Alle Popups"
+  },
+  "allowed": {
+    "message": "Erlaubt"
   },
   "already_subscribed": {
     "message": "Bereits abonniert"
@@ -262,21 +259,12 @@
     "description": "as in '5 (trackers) BLOCKED'",
     "message": "Blockiert"
   },
-  "blocking_category_tracker": {
-    "message": "Tracker"
-  },
   "blocking_category_tracker_found": {
     "message": "Gefunden"
-  },
-  "blocking_category_trackers": {
-    "message": "Tracker"
   },
   "blocking_category_whitelisted": {
     "description": "as in '5 (trackers) TRUSTED'",
     "message": "Vertrauenswürdig"
-  },
-  "blocking_trackers": {
-    "message": "Tracker"
   },
   "blocking_unblock_all": {
     "message": "Alle entsperren"
@@ -389,9 +377,6 @@
   },
   "box_trackers": {
     "message": "Tracker"
-  },
-  "box_warning_compatibility": {
-    "message": "Fehlerhafte Seitentracker"
   },
   "box_warning_nonsecure": {
     "message": "Unsichere Tracker"
@@ -537,7 +522,7 @@
   },
   "category_telemetry_desc": {
     "description": "User-facing description for the Telemetry tag category.",
-    "message": "Telemetrie"
+    "message": "Sammeln Sie Informationen über Benutzerinteraktionen, Fehlerberichte und Performance. Die Daten werden zur Verbesserung von Produkten verwendet und sollten an Dritte weitergegeben werden."
   },
   "category_unidentified": {
     "message": "Nicht kategorisiert"
@@ -677,11 +662,17 @@
   "customize_setup": {
     "message": "Benutzerdefiniertes Setup"
   },
+  "days": {
+    "message": "Tage"
+  },
   "detailed_view": {
     "message": "Detailansicht"
   },
   "disable": {
     "message": "Deaktivieren"
+  },
+  "disable_ghostery": {
+    "message": "Ghostery deaktivieren"
   },
   "disable_trackers_preview": {
     "message": "Tracker-Vorschau deaktivieren"
@@ -719,6 +710,9 @@
   },
   "enable_never_consent_": {
     "message": "Never-Consent aktivieren?"
+  },
+  "enable_new_setup": {
+    "message": "Neue Einrichtung aktivieren"
   },
   "enable_when_blacklisted": {
     "message": "„Website einschränken“ annullieren, um diese Funktion zu nutzen."
@@ -779,6 +773,9 @@
   "full_coverage_protection_promise": {
     "message": "Holen Sie sich umfassenden Schutz für alle Browser und Apps auf Ihrem Gerät."
   },
+  "ghostery__action_required": {
+    "message": "Ghostery: Aktion erforderlich"
+  },
   "ghostery_basic": {
     "message": "Basic"
   },
@@ -815,6 +812,9 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery zeigt Ihnen, wie viele Tracker auf einer Seite blockiert wurden. Wenn Sie auf das Ghostery-Symbol klicken, erhalten Sie detailliertere Informationen."
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "Ghostery funktioniert nicht mehr in:"
+  },
   "global_settings_saved": {
     "message": "Globale Einstellungen gespeichert"
   },
@@ -836,6 +836,9 @@
   "hosting": {
     "message": "Hosting",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "Stunden"
   },
   "ignore": {
     "message": "Ignorieren"
@@ -907,6 +910,9 @@
     "message": "Sonstiges",
     "description": "Tracker category name"
   },
+  "modified": {
+    "message": "Geändert"
+  },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "Weitere Informationen zur $${0}-Methode findest du im Ghostery-Manifest."
   },
@@ -971,6 +977,12 @@
   },
   "options_tracker_wheel_disabled": {
     "message": "Tracker-Rad in der Browser-Symbolleiste deaktivieren"
+  },
+  "organization": {
+    "message": "Organisation"
+  },
+  "organizations": {
+    "message": "Organisationen"
   },
   "page_load": {
     "message": "Laden der Seite"
@@ -1186,7 +1198,7 @@
     "message": " die die Seite unbenutzbar machen."
   },
   "panel_tracker_found_sources_title": {
-    "message": "Erkannte Tracker-URLs:"
+    "message": "Erkannte URLs:"
   },
   "panel_tracker_restrict_tooltip": {
     "message": "Auf dieser Website einschränken"
@@ -1215,9 +1227,6 @@
   },
   "panel_tracker_trust_tooltip": {
     "message": "Auf dieser Website vertrauen"
-  },
-  "panel_tracker_warning_compatibility_tooltip": {
-    "message": "Der blockierte Tracker macht die Seite unbenutzbar"
   },
   "panel_tracker_warning_nonsecure_tooltip": {
     "message": "Der Tracker ist unsicher"
@@ -1328,17 +1337,20 @@
     "message": "Werbung deaktiviert. Sie können sie wieder aktivieren in",
     "description": "translation must take into account that 'Settings' is appended to this string"
   },
+  "protection_disabled": {
+    "message": "Schutz deaktiviert"
+  },
   "recommended": {
     "message": "Empfohlen"
   },
   "refresh_and_try_again": {
     "message": "Aktualisieren Sie die Seite und versuchen Sie es erneut"
   },
-  "requests_modified": {
-    "message": "Geänderte Anfragen:"
+  "renew_ghostery_for_full_protection": {
+    "message": "erneuern Sie GHOSTERY für vollständigen Schutz"
   },
-  "requests_modified_tooltip": {
-    "message": "Gesamtzahl der durch Anti-Tracking und Ad-Blocking modifizierten Tracking-Anfragen und -Elemente"
+  "renew_setup": {
+    "message": "Einrichtung erneuern"
   },
   "select_basic": {
     "message": "Basic auswählen"
@@ -1835,6 +1847,9 @@
   "tooltip_trust_on": {
     "message": "Tracker auf Website zugelassen und Anti-Tracking deaktiviert. Zum Annullieren klicken."
   },
+  "tracker_database": {
+    "message": "Tracker Datenbank"
+  },
   "tracker_description_getting": {
     "message": "Tracker-Beschreibung wird abgerufen ..."
   },
@@ -1859,8 +1874,17 @@
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "Von Ghostery erkannte Tracker auf dieser Website:&nbsp;$${0}"
   },
+  "trackers_modified": {
+    "message": "Geänderte Tracker:"
+  },
   "trackers_preview": {
     "message": "Tracker-Vorschau"
+  },
+  "tracking_not_detected": {
+    "message": "Tracking nicht erkannt"
+  },
+  "trusted": {
+    "message": "Vertrauenswürdig"
   },
   "try_ghostery_midnight": {
     "message": "Testen Sie Ghostery Midnight"
@@ -1869,7 +1893,8 @@
     "message": "entsperrt"
   },
   "unidentified": {
-    "message": "Nicht identifiziert"
+    "message": "Nicht identifiziert",
+    "description": "Tracker category name"
   },
   "unidentified_description": {
     "message": "Nicht identifizierte Tracker durch Anti-Tracking gesäubert"
@@ -1877,6 +1902,9 @@
   "unknown": {
     "message": "Unbekannt",
     "description": "Tracker category name"
+  },
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "Wir haben unsere allgemeinen Geschäftsbedingungen aktualisiert. Um den Ghostery Tracker & Ad Blocker beim Surfen weiterhin nutzen zu können, erneuern Sie bitte die Einrichtung."
   },
   "welcome_to_ghostery": {
     "message": "Willkommen bei Ghostery"
@@ -1923,5 +1951,26 @@
   },
   "your_privacy_features_": {
     "message": "Ihre Datenschutzfunktionen:"
-  }
+	},
+	"account_details": {
+		"message": "Kontodetails"
+	},
+	"contributor": {
+		"message": "Unterstützer"
+	},
+	"help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
+		"message": "Helfen Sie Ghostery, für ein Web zu kämpfen, in dem Privatsphäre ein grundlegendes Menschenrecht ist."
+	},
+	"join_ghostery": {
+		"message": "Schließen Sie sich Ghostery an"
+	},
+	"save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
+		"message": "Speichern und synchronisieren Sie Ihre benutzerdefinierten Einstellungen auf verschiedenen Browsern und Geräten."
+	},
+	"settings_sync": {
+		"message": "Synchronisationseinstellungen"
+	},
+	"you_are_signed_in_as_": {
+		"message": "Sie sind angemeldet als:"
+	}
 }
