--- a/extension-manifest-v2/_locales/es/messages.json
+++ b/extension-manifest-v2/_locales/es/messages.json
@@ -22,17 +22,11 @@
       }
     }
   },
-  "ad": {
-    "message": "anuncio"
-  },
   "ad_blocking": {
     "message": "Bloqueador de anuncios"
   },
   "additional_permissions_required": {
     "message": "Se requieren permisos adicionales"
-  },
-  "ads": {
-    "message": "anuncios"
   },
   "ads___onboarding": {
     "message": "Anuncios"
@@ -92,6 +86,9 @@
   },
   "all_popups": {
     "message": "Todas las ventanas emergentes"
+  },
+  "allowed": {
+    "message": "Permitido"
   },
   "already_subscribed": {
     "message": "Ya te has suscrito"
@@ -262,21 +259,12 @@
     "description": "as in '5 (trackers) BLOCKED'",
     "message": "Bloqueado"
   },
-  "blocking_category_tracker": {
-    "message": "Rastreador"
-  },
   "blocking_category_tracker_found": {
     "message": "Encontrado"
-  },
-  "blocking_category_trackers": {
-    "message": "Rastreadores"
   },
   "blocking_category_whitelisted": {
     "description": "as in '5 (trackers) TRUSTED'",
     "message": "De confianza"
-  },
-  "blocking_trackers": {
-    "message": "Rastreadores"
   },
   "blocking_unblock_all": {
     "message": "Desbloquear todo"
@@ -389,9 +377,6 @@
   },
   "box_trackers": {
     "message": "Rastreadores"
-  },
-  "box_warning_compatibility": {
-    "message": "Rastreadores de páginas rotas"
   },
   "box_warning_nonsecure": {
     "message": "Rastreadores no seguros"
@@ -537,7 +522,7 @@
   },
   "category_telemetry_desc": {
     "description": "User-facing description for the Telemetry tag category.",
-    "message": "Telemetría"
+    "message": "Recopila información sobre la interacción de los usuarios, informes de errores y rendimiento. Los datos se utilizan para mejorar los productos y no deben compartirse con terceros."
   },
   "category_unidentified": {
     "message": "Sin categoría"
@@ -677,11 +662,17 @@
   "customize_setup": {
     "message": "Personalizar instalación"
   },
+  "days": {
+    "message": "días"
+  },
   "detailed_view": {
     "message": "Vista detallada"
   },
   "disable": {
     "message": "Deshabilitar"
+  },
+  "disable_ghostery": {
+    "message": "Desactivar Ghostery"
   },
   "disable_trackers_preview": {
     "message": "Deshabilitar vista previa de rastreadores"
@@ -719,6 +710,9 @@
   },
   "enable_never_consent_": {
     "message": "¿Habilitar Never-Consent?"
+  },
+  "enable_new_setup": {
+    "message": "Activar nueva configuración"
   },
   "enable_when_blacklisted": {
     "message": "Para usar esta función, anula Restringir sitio."
@@ -779,6 +773,9 @@
   "full_coverage_protection_promise": {
     "message": "Obtén protección de cobertura completa en todos los navegadores y aplicaciones de tu dispositivo"
   },
+  "ghostery__action_required": {
+    "message": "Ghostery: acción necesaria"
+  },
   "ghostery_basic": {
     "message": "Básico"
   },
@@ -815,6 +812,9 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery mostrará cuántos rastreadores ha bloqueado en una página. Si haces clic en el icono de Ghostery, verás información más detallada."
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "Ghostery dejará de funcionar en:"
+  },
   "global_settings_saved": {
     "message": "Ajustes globales guardados"
   },
@@ -836,6 +836,9 @@
   "hosting": {
     "message": "Hosting",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "horas"
   },
   "ignore": {
     "message": "Ignorar"
@@ -907,6 +910,9 @@
     "message": "Miscelánea",
     "description": "Tracker category name"
   },
+  "modified": {
+    "message": "Modificada"
+  },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "Más información sobre la metodología $${0} en el Manifiesto de Ghostery."
   },
@@ -971,6 +977,12 @@
   },
   "options_tracker_wheel_disabled": {
     "message": "Desactivar rueda del rastreador en la barra de herramientas del navegador"
+  },
+  "organization": {
+    "message": "Organización"
+  },
+  "organizations": {
+    "message": "Organizaciones"
   },
   "page_load": {
     "message": "Carga de página"
@@ -1186,7 +1198,7 @@
     "message": " rompiendo la página."
   },
   "panel_tracker_found_sources_title": {
-    "message": "URL de rastreadores detectadas:"
+    "message": "URLs detectadas:"
   },
   "panel_tracker_restrict_tooltip": {
     "message": "Restringir en este sitio"
@@ -1215,9 +1227,6 @@
   },
   "panel_tracker_trust_tooltip": {
     "message": "Confiar en este sitio"
-  },
-  "panel_tracker_warning_compatibility_tooltip": {
-    "message": "El rastreador bloqueado rompe la página"
   },
   "panel_tracker_warning_nonsecure_tooltip": {
     "message": "El rastreador no es seguro"
@@ -1328,17 +1337,20 @@
     "message": "Se desactivaron las promociones. Las puedes volver a activar en",
     "description": "translation must take into account that 'Settings' is appended to this string"
   },
+  "protection_disabled": {
+    "message": "Protección desactivada"
+  },
   "recommended": {
     "message": "Recomendado"
   },
   "refresh_and_try_again": {
     "message": "Actualiza la página y vuelve a probar"
   },
-  "requests_modified": {
-    "message": "Solicitudes modificadas:"
+  "renew_ghostery_for_full_protection": {
+    "message": "Renueva GHOSTERY para tener protección total"
   },
-  "requests_modified_tooltip": {
-    "message": "Número total de solicitudes de rastreo y elementos modificados por Antirrastreadores y Bloqueador de anuncios"
+  "renew_setup": {
+    "message": "Renovar configuración"
   },
   "select_basic": {
     "message": "Seleccionar Básico"
@@ -1835,6 +1847,9 @@
   "tooltip_trust_on": {
     "message": "En este sitio, se permitirán los rastreadores y se deshabilitará Anti-Tracking. Clic para deshacer."
   },
+  "tracker_database": {
+    "message": "Base de datos de rastreadores"
+  },
   "tracker_description_getting": {
     "message": "Obteniendo la descripción del rastreador..."
   },
@@ -1859,8 +1874,17 @@
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "Rastreadores detectados por Ghostery en esta página web:&nbsp;$${0}"
   },
+  "trackers_modified": {
+    "message": "Rastreadores Modificados:"
+  },
   "trackers_preview": {
     "message": "Vista previa de rastreadores"
+  },
+  "tracking_not_detected": {
+    "message": "Seguimiento no detectado"
+  },
+  "trusted": {
+    "message": "De confianza"
   },
   "try_ghostery_midnight": {
     "message": "Prueba Ghostery Midnight"
@@ -1869,7 +1893,8 @@
     "message": "desbloqueado"
   },
   "unidentified": {
-    "message": "Sin identificar"
+    "message": "Sin identificar",
+    "description": "Tracker category name"
   },
   "unidentified_description": {
     "message": "Antirrastreadores depuró los rastreadores sin identificar"
@@ -1877,6 +1902,9 @@
   "unknown": {
     "message": "Desconocido",
     "description": "Tracker category name"
+  },
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "Actualizamos los Términos y condiciones. Renueva la configuración para seguir usando Ghostery para bloquear anuncios y detener rastreadores mientras navegas."
   },
   "welcome_to_ghostery": {
     "message": "Bienvenido a Ghostery"
@@ -1923,5 +1951,26 @@
   },
   "your_privacy_features_": {
     "message": "Tus funciones de privacidad:"
-  }
+	},
+	"account_details": {
+		"message": "Detalles de la cuenta"
+	},
+	"contributor": {
+		"message": "Colaborador"
+	},
+	"help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
+		"message": "Únete a Ghostery en la lucha por una web en la que la privacidad sea un derecho humano básico."
+	},
+	"join_ghostery": {
+		"message": "Únete a Ghostery"
+	},
+	"save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
+		"message": "Guarda y sincroniza tus ajustes personalizados en todos tus navegadores y dispositivos."
+	},
+	"settings_sync": {
+		"message": "Sincronizar configuración"
+	},
+	"you_are_signed_in_as_": {
+		"message": "Iniciaste sesión como:"
+	}
 }
