--- a/extension-manifest-v2/_locales/fr/messages.json
+++ b/extension-manifest-v2/_locales/fr/messages.json
@@ -22,17 +22,11 @@
       }
     }
   },
-  "ad": {
-    "message": "publicité"
-  },
   "ad_blocking": {
     "message": "Blocage de publicité"
   },
   "additional_permissions_required": {
     "message": "Permissions supplémentaires requises"
-  },
-  "ads": {
-    "message": "publicités"
   },
   "ads___onboarding": {
     "message": "Publicités"
@@ -92,6 +86,9 @@
   },
   "all_popups": {
     "message": "Toutes les fenêtres contextuelles"
+  },
+  "allowed": {
+    "message": "Autorisé"
   },
   "already_subscribed": {
     "message": "Déjà abonné/e"
@@ -262,21 +259,12 @@
     "description": "as in '5 (trackers) BLOCKED'",
     "message": "Bloqué"
   },
-  "blocking_category_tracker": {
-    "message": "Mouchard"
-  },
   "blocking_category_tracker_found": {
     "message": "Trouvé"
-  },
-  "blocking_category_trackers": {
-    "message": "mouchards"
   },
   "blocking_category_whitelisted": {
     "description": "as in '5 (trackers) TRUSTED'",
     "message": "Autorisé"
-  },
-  "blocking_trackers": {
-    "message": "mouchards"
   },
   "blocking_unblock_all": {
     "message": "Tout débloquer"
@@ -389,9 +377,6 @@
   },
   "box_trackers": {
     "message": "mouchards"
-  },
-  "box_warning_compatibility": {
-    "message": "mouchards de page brisée"
   },
   "box_warning_nonsecure": {
     "message": "mouchards non sécurisés"
@@ -537,7 +522,7 @@
   },
   "category_telemetry_desc": {
     "description": "User-facing description for the Telemetry tag category.",
-    "message": "Télémétrie"
+    "message": "Recueillir des informations sur les interactions utilisateur, les rapports d'erreur et les performances. Les données seront utilisées pour améliorer nos produits et ne seront pas partagées avec des tiers."
   },
   "category_unidentified": {
     "message": "Non-classés"
@@ -677,11 +662,17 @@
   "customize_setup": {
     "message": "Personnaliser la configuration"
   },
+  "days": {
+    "message": "jours"
+  },
   "detailed_view": {
     "message": "Affichage détaillé"
   },
   "disable": {
     "message": "Désactiver"
+  },
+  "disable_ghostery": {
+    "message": "Désactiver Ghostery"
   },
   "disable_trackers_preview": {
     "message": "Désact. aperçu des mouchards"
@@ -719,6 +710,9 @@
   },
   "enable_never_consent_": {
     "message": "Activer Never-Consent ?"
+  },
+  "enable_new_setup": {
+    "message": "Activer la nouvelle configuration"
   },
   "enable_when_blacklisted": {
     "message": "Pour utiliser cette fonction, restreignez le site."
@@ -779,6 +773,9 @@
   "full_coverage_protection_promise": {
     "message": "Bénéficiez d'une protection complète sur tous les navigateurs et toutes les applications sur votre appareil"
   },
+  "ghostery__action_required": {
+    "message": "Ghostery : action requise"
+  },
   "ghostery_basic": {
     "message": "Version de base"
   },
@@ -815,6 +812,9 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery affichera le nombre de trackers bloqués sur une page. Vous pouvez obtenir des informations détaillées en cliquant sur l'icône Ghostery."
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "Ghostery cessera de fonctionner dans :"
+  },
   "global_settings_saved": {
     "message": "Paramètres globaux sauvegardés"
   },
@@ -836,6 +836,9 @@
   "hosting": {
     "message": "Hébergement",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "heures"
   },
   "ignore": {
     "message": "Ignorer"
@@ -907,6 +910,9 @@
     "message": "Divers",
     "description": "Tracker category name"
   },
+  "modified": {
+    "message": "Modifié"
+  },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "Plus d'informations sur la méthodologie $${0} dans le Manifeste de Ghostery."
   },
@@ -971,6 +977,12 @@
   },
   "options_tracker_wheel_disabled": {
     "message": "Désactiver la roue des trackers dans la barre d’outils du navigateur"
+  },
+  "organization": {
+    "message": "Organisation"
+  },
+  "organizations": {
+    "message": "Organisations"
   },
   "page_load": {
     "message": "Chargement de la page"
@@ -1186,7 +1198,7 @@
     "message": " bloquent le chargement de la page."
   },
   "panel_tracker_found_sources_title": {
-    "message": "URLs de mouchards détectées :"
+    "message": "URLs détectés :"
   },
   "panel_tracker_restrict_tooltip": {
     "message": "Limiter sur ce site"
@@ -1215,9 +1227,6 @@
   },
   "panel_tracker_trust_tooltip": {
     "message": "Se fier aux mouchards sur ce site"
-  },
-  "panel_tracker_warning_compatibility_tooltip": {
-    "message": "Le mouchard bloqué empêche l'affichage"
   },
   "panel_tracker_warning_nonsecure_tooltip": {
     "message": "Le mouchard est non sécurisé"
@@ -1328,17 +1337,20 @@
     "message": "Les promotions sont désactivées. Vous pouvez les réactiver.",
     "description": "translation must take into account that 'Settings' is appended to this string"
   },
+  "protection_disabled": {
+    "message": "Protection désactivée"
+  },
   "recommended": {
     "message": "Recommandé"
   },
   "refresh_and_try_again": {
     "message": "Actualiser la page et réessayer"
   },
-  "requests_modified": {
-    "message": "Demandes modifiées :"
+  "renew_ghostery_for_full_protection": {
+    "message": "Renouvelez Ghostery pour bénéficier d'une protection complète"
   },
-  "requests_modified_tooltip": {
-    "message": "Nombre total de demandes de suivi et d'éléments modifiés par l'Anti-Pistage et le Blocage de publicité"
+  "renew_setup": {
+    "message": "Renouveler la configuration"
   },
   "select_basic": {
     "message": "Sélectionner la version de base"
@@ -1835,6 +1847,9 @@
   "tooltip_trust_on": {
     "message": "Mouchards permis et anti-pistage désactivé sur ce site. Cliquez pour annuler."
   },
+  "tracker_database": {
+    "message": "Fichage de traqueurs"
+  },
   "tracker_description_getting": {
     "message": "Obtenir une description du mouchard..."
   },
@@ -1859,8 +1874,17 @@
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "Mouchards détectés par Ghostery sur ce site :&nbsp;$${0}"
   },
+  "trackers_modified": {
+    "message": "Traqueurs modifiés :"
+  },
   "trackers_preview": {
     "message": "Aperçu mouchards"
+  },
+  "tracking_not_detected": {
+    "message": "Le suivi n'est pas détecté"
+  },
+  "trusted": {
+    "message": "Autorisé"
   },
   "try_ghostery_midnight": {
     "message": "Essayez Ghostery Midnight"
@@ -1869,7 +1893,8 @@
     "message": "non bloqué"
   },
   "unidentified": {
-    "message": "Non identifié"
+    "message": "Non identifié",
+    "description": "Tracker category name"
   },
   "unidentified_description": {
     "message": "Mouchards non identifiés nettoyés par l'Anti-Pistage"
@@ -1877,6 +1902,9 @@
   "unknown": {
     "message": "Inconnu",
     "description": "Tracker category name"
+  },
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "Nous avons mis à jour nos Conditions générales. Pour continuer à utiliser le bloqueur de trackers et de publicités Ghostery, veuillez renouveler la configuration."
   },
   "welcome_to_ghostery": {
     "message": "Bienvenue à Ghostery"
@@ -1923,5 +1951,26 @@
   },
   "your_privacy_features_": {
     "message": "Vos fonctions de confidentialité :"
-  }
+	},
+	"account_details": {
+		"message": "Détails du compte"
+	},
+	"contributor": {
+		"message": "Contributeur"
+	},
+	"help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
+		"message": "Aidez Ghostery à lutter pour un Web où la vie privée est un droit humain fondamental."
+	},
+	"join_ghostery": {
+		"message": "Rejoignez Ghostery"
+	},
+	"save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
+		"message": "Enregistrez et synchronisez vos paramètres personnalisés sur vos navigateurs et vos appareils."
+	},
+	"settings_sync": {
+		"message": "Synchronisation des paramètres"
+	},
+	"you_are_signed_in_as_": {
+		"message": "Vous êtes connecté en tant que :"
+	}
 }
