--- a/extension-manifest-v2/_locales/ja/messages.json
+++ b/extension-manifest-v2/_locales/ja/messages.json
@@ -22,17 +22,11 @@
       }
     }
   },
-  "ad": {
-    "message": "広告"
-  },
   "ad_blocking": {
     "message": "広告ブロッキング"
   },
   "additional_permissions_required": {
     "message": "必要な追加パーミッション"
-  },
-  "ads": {
-    "message": "広告"
   },
   "ads___onboarding": {
     "message": "広告"
@@ -92,6 +86,9 @@
   },
   "all_popups": {
     "message": "すべてのポップアップ"
+  },
+  "allowed": {
+    "message": "許可"
   },
   "already_subscribed": {
     "message": "登録済み"
@@ -262,21 +259,12 @@
     "description": "as in '5 (trackers) BLOCKED'",
     "message": "ブロックされた対象"
   },
-  "blocking_category_tracker": {
-    "message": "トラッカー"
-  },
   "blocking_category_tracker_found": {
     "message": "見つかりました"
-  },
-  "blocking_category_trackers": {
-    "message": "トラッカー"
   },
   "blocking_category_whitelisted": {
     "description": "as in '5 (trackers) TRUSTED'",
     "message": "信頼済み"
-  },
-  "blocking_trackers": {
-    "message": "トラッカー"
   },
   "blocking_unblock_all": {
     "message": "すべてのブロックを解除"
@@ -389,9 +377,6 @@
   },
   "box_trackers": {
     "message": "トラッカー"
-  },
-  "box_warning_compatibility": {
-    "message": "区切られたページのトラッカー"
   },
   "box_warning_nonsecure": {
     "message": "保護のないトラッカー"
@@ -537,7 +522,7 @@
   },
   "category_telemetry_desc": {
     "description": "User-facing description for the Telemetry tag category.",
-    "message": "テレメトリー"
+    "message": "ユーザーとのインタラクション、エラーレポート、パフォーマンスに関する情報を収集します。データは製品の改良に使用され、サードパーティーと共有されます。"
   },
   "category_unidentified": {
     "message": "未分類"
@@ -677,11 +662,17 @@
   "customize_setup": {
     "message": "カスタマイズ設定"
   },
+  "days": {
+    "message": "日"
+  },
   "detailed_view": {
     "message": "詳細ビュー"
   },
   "disable": {
     "message": "無効化"
+  },
+  "disable_ghostery": {
+    "message": "Ghosteryを無効にする"
   },
   "disable_trackers_preview": {
     "message": "トラッカーの無効化プレビュー"
@@ -719,6 +710,9 @@
   },
   "enable_never_consent_": {
     "message": "決して同意しないを有効化しますか?"
+  },
+  "enable_new_setup": {
+    "message": "新規設定を有効にする"
   },
   "enable_when_blacklisted": {
     "message": "この機能を使用するには、「サイトを制限」を元に戻してください。"
@@ -779,6 +773,9 @@
   "full_coverage_protection_promise": {
     "message": "デバイス上のすべてのブラウザとアプリを包括的に保護しましょう"
   },
+  "ghostery__action_required": {
+    "message": "Ghostery: 要対応"
+  },
   "ghostery_basic": {
     "message": "ベーシック"
   },
@@ -815,6 +812,9 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghosteryは、あるページでブロックされたトラッカーの数を表示します。Ghosteryのアイコンをクリックすると、より詳細な情報が表示されます。"
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "Ghosteryの停止:"
+  },
   "global_settings_saved": {
     "message": "グローバル設定が保存されました"
   },
@@ -836,6 +836,9 @@
   "hosting": {
     "message": "ホスティング",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "時間"
   },
   "ignore": {
     "message": "無視する"
@@ -907,6 +910,9 @@
     "message": "さまざまな",
     "description": "Tracker category name"
   },
+  "modified": {
+    "message": "修正済み"
+  },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "$${0}の方法論の詳細については、Ghostery's Manifestoに記載されています。"
   },
@@ -971,6 +977,12 @@
   },
   "options_tracker_wheel_disabled": {
     "message": "ブラウザのツールバーでトラッカーホイールを無効にする"
+  },
+  "organization": {
+    "message": "組織"
+  },
+  "organizations": {
+    "message": "組織"
   },
   "page_load": {
     "message": "ページのロード"
@@ -1186,7 +1198,7 @@
     "message": " ページを区切っています。"
   },
   "panel_tracker_found_sources_title": {
-    "message": "検出されたトラッカーURL："
+    "message": "検出されたURL:"
   },
   "panel_tracker_restrict_tooltip": {
     "message": "このサイトで制限"
@@ -1215,9 +1227,6 @@
   },
   "panel_tracker_trust_tooltip": {
     "message": "このサイトで信頼"
-  },
-  "panel_tracker_warning_compatibility_tooltip": {
-    "message": "ブロックされたトラッカーがページを区切ります"
   },
   "panel_tracker_warning_nonsecure_tooltip": {
     "message": "トラッカーが保護されていません"
@@ -1328,17 +1337,20 @@
     "message": "プロモーションを無効にしました。以下でいつでも有効化できます:",
     "description": "translation must take into account that 'Settings' is appended to this string"
   },
+  "protection_disabled": {
+    "message": "プロテクション無効"
+  },
   "recommended": {
     "message": "おすすめ"
   },
   "refresh_and_try_again": {
     "message": "ページを更新してもう一度お試しください"
   },
-  "requests_modified": {
-    "message": "変更済みリクエスト数："
+  "renew_ghostery_for_full_protection": {
+    "message": "Ghosteryを更新して包括的な保護機能を利用する"
   },
-  "requests_modified_tooltip": {
-    "message": "追跡防止と広告ブロックにより変更された追跡のリクエストと要素の合計数"
+  "renew_setup": {
+    "message": "設定を更新"
   },
   "select_basic": {
     "message": "ベーシックを選択"
@@ -1835,6 +1847,9 @@
   "tooltip_trust_on": {
     "message": "サイトで、トラッカーが許可され、追跡防止が無効になりました。元に戻すにはクリックしてください。"
   },
+  "tracker_database": {
+    "message": "トラッカー・データベース"
+  },
   "tracker_description_getting": {
     "message": "トラッカーの説明を取得中…"
   },
@@ -1859,8 +1874,17 @@
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "このウェブサイト上でGhosteryがトラッカーを検出:&nbsp;$${0}"
   },
+  "trackers_modified": {
+    "message": "トラッカーが変更された："
+  },
   "trackers_preview": {
     "message": "トラッカーのプレビュー"
+  },
+  "tracking_not_detected": {
+    "message": "ラッキングが検出されない"
+  },
+  "trusted": {
+    "message": "信頼済み"
   },
   "try_ghostery_midnight": {
     "message": "Ghostery Midnightを試す"
@@ -1869,7 +1893,8 @@
     "message": "ブロックされていない対象"
   },
   "unidentified": {
-    "message": "未知"
+    "message": "未知",
+    "description": "Tracker category name"
   },
   "unidentified_description": {
     "message": "未知のトラッカーが追跡防止によって削除されました"
@@ -1877,6 +1902,9 @@
   "unknown": {
     "message": "未知",
     "description": "Tracker category name"
+  },
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "利用規約を更新しました。Ghosteryのトラッカー＆広告ブロッカーを引き続きご利用いただくには、設定を更新してください。"
   },
   "welcome_to_ghostery": {
     "message": "Ghosteryをご利用いただきありがとうございます"
@@ -1923,5 +1951,26 @@
   },
   "your_privacy_features_": {
     "message": "あなたのプライバシーを守る機能:"
-  }
+	},
+	"account_details": {
+		"message": "アカウント詳細"
+	},
+	"contributor": {
+		"message": "Contributor"
+	},
+	"help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
+		"message": "Ghosteryはウェブ上でのプライバシーを基本的人権だと考え、それに対する対策を講じています。ぜひサポートをお願いいたします。"
+	},
+	"join_ghostery": {
+		"message": "Ghosteryに登録"
+	},
+	"save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
+		"message": "ブラウザとデバイス間でカスタム設定を保存・同期しましょう。"
+	},
+	"settings_sync": {
+		"message": "同期設定"
+	},
+	"you_are_signed_in_as_": {
+		"message": "次のユーザーでサインインしています:"
+	}
 }
