--- a/extension-manifest-v2/_locales/ko/messages.json
+++ b/extension-manifest-v2/_locales/ko/messages.json
@@ -22,17 +22,11 @@
       }
     }
   },
-  "ad": {
-    "message": "광고"
-  },
   "ad_blocking": {
     "message": "광고 차단"
   },
   "additional_permissions_required": {
     "message": "추가 권한 필요"
-  },
-  "ads": {
-    "message": "광고"
   },
   "ads___onboarding": {
     "message": "광고"
@@ -92,6 +86,9 @@
   },
   "all_popups": {
     "message": "팝업 전체"
+  },
+  "allowed": {
+    "message": "허용됨"
   },
   "already_subscribed": {
     "message": "이미 가입함"
@@ -262,21 +259,12 @@
     "description": "as in '5 (trackers) BLOCKED'",
     "message": "차단됨 "
   },
-  "blocking_category_tracker": {
-    "message": "트래커 "
-  },
   "blocking_category_tracker_found": {
     "message": "찾음 "
-  },
-  "blocking_category_trackers": {
-    "message": "트래커 "
   },
   "blocking_category_whitelisted": {
     "description": "as in '5 (trackers) TRUSTED'",
     "message": "신뢰할 수 있는 사이트"
-  },
-  "blocking_trackers": {
-    "message": "트래커 "
   },
   "blocking_unblock_all": {
     "message": "모두 차단 해제 "
@@ -389,9 +377,6 @@
   },
   "box_trackers": {
     "message": "트래커 "
-  },
-  "box_warning_compatibility": {
-    "message": "깨진 페이지 트래커 "
   },
   "box_warning_nonsecure": {
     "message": "안전하지 않은 트래커 "
@@ -537,7 +522,7 @@
   },
   "category_telemetry_desc": {
     "description": "User-facing description for the Telemetry tag category.",
-    "message": "원격 측정"
+    "message": "사용자 상호작용, 오류 보고서, 성능에 대한 정보를 수집합니다. 데이터는 제품 개선 목적으로 사용되며 제3자와 공유될 수 있습니다."
   },
   "category_unidentified": {
     "message": "분류되지 않음 "
@@ -677,11 +662,17 @@
   "customize_setup": {
     "message": "사용자 지정 설정 "
   },
+  "days": {
+    "message": "일"
+  },
   "detailed_view": {
     "message": "자세히 보기 "
   },
   "disable": {
     "message": "비활성화 "
+  },
+  "disable_ghostery": {
+    "message": "Ghostery 비활성화"
   },
   "disable_trackers_preview": {
     "message": "트래커 미리보기 끄기"
@@ -719,6 +710,9 @@
   },
   "enable_never_consent_": {
     "message": "동의하지 않음을 활성화하시겠습니까?"
+  },
+  "enable_new_setup": {
+    "message": "새 셋업 활성화"
   },
   "enable_when_blacklisted": {
     "message": "이 기능을 사용하려면 사이트 제한을 실행 취소하십시오."
@@ -779,6 +773,9 @@
   "full_coverage_protection_promise": {
     "message": "장치의 모든 브라우저 및 앱을 완전하게 보호하세요"
   },
+  "ghostery__action_required": {
+    "message": "Ghostery: 조치 필요"
+  },
   "ghostery_basic": {
     "message": "Basic"
   },
@@ -815,6 +812,9 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery는 페이지에서 차단된 트래커의 수를 보여줍니다. Ghostery 아이콘을 클릭하면 자세한 정보를 볼 수 있습니다."
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "Ghostery 작동 중지까지 남은 시간:"
+  },
   "global_settings_saved": {
     "message": "전역 설정 저장됨"
   },
@@ -836,6 +836,9 @@
   "hosting": {
     "message": "호스팅",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "시간"
   },
   "ignore": {
     "message": "무시"
@@ -907,6 +910,9 @@
     "message": "기타",
     "description": "Tracker category name"
   },
+  "modified": {
+    "message": "수정됨"
+  },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "$${0} 어떠한 방법으로 작동하는지 그 자세한 정보는 Ghostery의 강령에서 확인해 보실 수 있습니다."
   },
@@ -971,6 +977,12 @@
   },
   "options_tracker_wheel_disabled": {
     "message": "브라우저 툴바에서 트래커 바퀴 비활성화"
+  },
+  "organization": {
+    "message": "조직"
+  },
+  "organizations": {
+    "message": "조직"
   },
   "page_load": {
     "message": "페이지 로드 "
@@ -1186,7 +1198,7 @@
     "message": " 페이지가 깨집니다."
   },
   "panel_tracker_found_sources_title": {
-    "message": "감지된 트래커 URL: "
+    "message": "감지된 URL:"
   },
   "panel_tracker_restrict_tooltip": {
     "message": "이 사이트에서 제한 "
@@ -1215,9 +1227,6 @@
   },
   "panel_tracker_trust_tooltip": {
     "message": "이 사이트에서 신뢰 "
-  },
-  "panel_tracker_warning_compatibility_tooltip": {
-    "message": "차단된 트래커로 인해 페이지 깨짐 "
   },
   "panel_tracker_warning_nonsecure_tooltip": {
     "message": "안전하지 않은 트래커 "
@@ -1328,17 +1337,20 @@
     "message": "프로모션이 해제되었습니다. 원하실 때 설정에서 다시 켤 수 있습니다.",
     "description": "translation must take into account that 'Settings' is appended to this string"
   },
+  "protection_disabled": {
+    "message": "보호 비활성화"
+  },
   "recommended": {
     "message": "추천"
   },
   "refresh_and_try_again": {
     "message": "페이지를 새로 고친 다음 다시 시도해 주십시오."
   },
-  "requests_modified": {
-    "message": "변경된 요청:"
+  "renew_ghostery_for_full_protection": {
+    "message": "완벽한 보호를 위해 GHOSTERY를 갱신하세요"
   },
-  "requests_modified_tooltip": {
-    "message": "추적 방지와 광고 차단을 통한 추적 요청 및 변경 요소의 총 수"
+  "renew_setup": {
+    "message": "셋업 갱신"
   },
   "select_basic": {
     "message": "Basic 선택하기"
@@ -1835,6 +1847,9 @@
   "tooltip_trust_on": {
     "message": "사이트에서 트래커 허용, 추적 방지 비활성화됨. 실행 취소하려면 클릭하십시오."
   },
+  "tracker_database": {
+    "message": "기 데이터베이스"
+  },
   "tracker_description_getting": {
     "message": "트래커 설명을 가져오는 중..."
   },
@@ -1859,8 +1874,17 @@
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "이 웹사이트에서 Ghostery가 탐지한 추적기:&nbsp;$${0}"
   },
+  "trackers_modified": {
+    "message": "트래커 수정:"
+  },
   "trackers_preview": {
     "message": "트래커 미리보기"
+  },
+  "tracking_not_detected": {
+    "message": "추적이 감지되지 않음"
+  },
+  "trusted": {
+    "message": "신뢰할 수 있는 사이트"
   },
   "try_ghostery_midnight": {
     "message": "Ghostery Midnight를 사용해 보세요"
@@ -1869,7 +1893,8 @@
     "message": "차단되지 않음 "
   },
   "unidentified": {
-    "message": "알 수 없음"
+    "message": "알 수 없음",
+    "description": "Tracker category name"
   },
   "unidentified_description": {
     "message": "추적 방지에서 제거한 알 수 없는 트래커"
@@ -1877,6 +1902,9 @@
   "unknown": {
     "message": "알 수 없음 ",
     "description": "Tracker category name"
+  },
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "이용 약관이 업데이트되었습니다. 브라우징 중 Ghostery 트래커 및 광고 차단기를 계속 사용하려면 셋업을 갱신해주세요."
   },
   "welcome_to_ghostery": {
     "message": "Ghostery를 시작합니다"
@@ -1923,5 +1951,26 @@
   },
   "your_privacy_features_": {
     "message": "프라이버시 관련 기능:"
-  }
+	},
+	"account_details": {
+		"message": "계정 세부정보"
+	},
+	"contributor": {
+		"message": "기부자"
+	},
+	"help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
+		"message": "개인정보 보호가 기본 인권인 웹을 위해 Ghostery가 싸울 힘을 주세요."
+	},
+	"join_ghostery": {
+		"message": "Ghostery 가입"
+	},
+	"save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
+		"message": "맞춤 설정을 저장하여 여러 브라우저 및 장치 간에 동기화합니다."
+	},
+	"settings_sync": {
+		"message": "설정 동기화"
+	},
+	"you_are_signed_in_as_": {
+		"message": "로그인한 계정:"
+	}
 }
