--- a/extension-manifest-v2/_locales/pt_BR/messages.json
+++ b/extension-manifest-v2/_locales/pt_BR/messages.json
@@ -22,17 +22,11 @@
       }
     }
   },
-  "ad": {
-    "message": "anúncio"
-  },
   "ad_blocking": {
     "message": "Bloqueio de anúncios"
   },
   "additional_permissions_required": {
     "message": "Permissões adicionais necessárias"
-  },
-  "ads": {
-    "message": "anúncios"
   },
   "ads___onboarding": {
     "message": "Anúncios"
@@ -92,6 +86,9 @@
   },
   "all_popups": {
     "message": "Todos as popups"
+  },
+  "allowed": {
+    "message": "Permitido"
   },
   "already_subscribed": {
     "message": "Já assinei"
@@ -262,21 +259,12 @@
     "description": "as in '5 (trackers) BLOCKED'",
     "message": "Bloqueados"
   },
-  "blocking_category_tracker": {
-    "message": "Rastreador"
-  },
   "blocking_category_tracker_found": {
     "message": "Encontrado"
-  },
-  "blocking_category_trackers": {
-    "message": "Rastreadores"
   },
   "blocking_category_whitelisted": {
     "description": "as in '5 (trackers) TRUSTED'",
     "message": "Confiável"
-  },
-  "blocking_trackers": {
-    "message": "Rastreadores"
   },
   "blocking_unblock_all": {
     "message": "Desbloquear tudo"
@@ -389,9 +377,6 @@
   },
   "box_trackers": {
     "message": "Rastreadores"
-  },
-  "box_warning_compatibility": {
-    "message": "Rastreadores de páginas quebradas"
   },
   "box_warning_nonsecure": {
     "message": "Rastreadores não-seguros"
@@ -537,7 +522,7 @@
   },
   "category_telemetry_desc": {
     "description": "User-facing description for the Telemetry tag category.",
-    "message": "Telemetria"
+    "message": "Reúna informações sobre a interação do usuário, relatórios de erros e desempenho. Os dados são usados para produtos aprimorados e devem ser compartilhados com terceiros."
   },
   "category_unidentified": {
     "message": "Sem categorias"
@@ -677,11 +662,17 @@
   "customize_setup": {
     "message": "Personalizar Configuração"
   },
+  "days": {
+    "message": "dias"
+  },
   "detailed_view": {
     "message": "Visão detalhada"
   },
   "disable": {
     "message": "Desativar"
+  },
+  "disable_ghostery": {
+    "message": "Desativar Ghostery"
   },
   "disable_trackers_preview": {
     "message": "Desativar a visualização de rastreadores"
@@ -719,6 +710,9 @@
   },
   "enable_never_consent_": {
     "message": "Ativar Never-Consent?"
+  },
+  "enable_new_setup": {
+    "message": "Ativar nova configuração"
   },
   "enable_when_blacklisted": {
     "message": "Para usar esta função, desfaça Restringir Site."
@@ -779,6 +773,9 @@
   "full_coverage_protection_promise": {
     "message": "Obtenha proteção completa para todos os navegadores e aplicativos do seu dispositivo"
   },
+  "ghostery__action_required": {
+    "message": "Ghostery: ação exigida"
+  },
   "ghostery_basic": {
     "message": "Básico"
   },
@@ -815,6 +812,9 @@
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "O Ghostery mostrará quantos rastreadores foram bloqueados em uma página. Clicar no ícone Ghostery revela informações mais detalhadas."
   },
+  "ghostery_will_stop_working_in_": {
+    "message": "O Ghostery parará de trabalhar em:"
+  },
   "global_settings_saved": {
     "message": "Configurações Globais Salvas"
   },
@@ -836,6 +836,9 @@
   "hosting": {
     "message": "Hospedando",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "horas"
   },
   "ignore": {
     "message": "Ignorar"
@@ -907,6 +910,9 @@
     "message": "Miscelânea",
     "description": "Tracker category name"
   },
+  "modified": {
+    "message": "Modificado"
+  },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "Mais informações sobre a metodologia $${0} no Manifesto do Ghostery."
   },
@@ -971,6 +977,12 @@
   },
   "options_tracker_wheel_disabled": {
     "message": "Desativar o Tracker Wheel na barra de ferramentas do navegador"
+  },
+  "organization": {
+    "message": "Organização"
+  },
+  "organizations": {
+    "message": "Organizações"
   },
   "page_load": {
     "message": "Carregar página"
@@ -1186,7 +1198,7 @@
     "message": " quebrando a página."
   },
   "panel_tracker_found_sources_title": {
-    "message": "Rastreadores de URL detectados:"
+    "message": "URLs detectados:"
   },
   "panel_tracker_restrict_tooltip": {
     "message": "Restringir nesse site"
@@ -1215,9 +1227,6 @@
   },
   "panel_tracker_trust_tooltip": {
     "message": "Confiar nesse site"
-  },
-  "panel_tracker_warning_compatibility_tooltip": {
-    "message": "Rastreador bloqueado quebra página"
   },
   "panel_tracker_warning_nonsecure_tooltip": {
     "message": "O rastreador é não-seguro"
@@ -1328,17 +1337,20 @@
     "message": "As promoções foram desativadas. Você pode reativá-las",
     "description": "translation must take into account that 'Settings' is appended to this string"
   },
+  "protection_disabled": {
+    "message": "Proteção desativada"
+  },
   "recommended": {
     "message": "Recomendado"
   },
   "refresh_and_try_again": {
     "message": "Atualize a página e tente novamente"
   },
-  "requests_modified": {
-    "message": "Solicitações modificadas:"
+  "renew_ghostery_for_full_protection": {
+    "message": "renovar GHOSTERY para ter proteção completa"
   },
-  "requests_modified_tooltip": {
-    "message": "Número total de solicitações de rastreamento e elementos modificados pelo Anti-rastreamento e pelo Bloqueio de anúncios"
+  "renew_setup": {
+    "message": "Renovar configuração"
   },
   "select_basic": {
     "message": "Selecionar Básico"
@@ -1835,6 +1847,9 @@
   "tooltip_trust_on": {
     "message": "Os rastreadores estão permitidos e o anti-rastreamento está desativado neste site. Clique para Desfazer."
   },
+  "tracker_database": {
+    "message": "Banco de dados do rastreador"
+  },
   "tracker_description_getting": {
     "message": "Obter descrição do rastreador..."
   },
@@ -1859,8 +1874,17 @@
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "Rastreadores detectados pelo Ghostery neste site:&nbsp;$$$${0}"
   },
+  "trackers_modified": {
+    "message": "Rastreadores modificados:"
+  },
   "trackers_preview": {
     "message": "Prévia de rastreadores"
+  },
+  "tracking_not_detected": {
+    "message": "Rastreamento não detectado"
+  },
+  "trusted": {
+    "message": "Confiável"
   },
   "try_ghostery_midnight": {
     "message": "Experimente o Ghostery Midnight"
@@ -1869,7 +1893,8 @@
     "message": "bloqueada"
   },
   "unidentified": {
-    "message": "Não identificado"
+    "message": "Não identificado",
+    "description": "Tracker category name"
   },
   "unidentified_description": {
     "message": "Rastreadores não identificados desinfectados por Anti-Tracking"
@@ -1877,6 +1902,9 @@
   "unknown": {
     "message": "Desconhecido",
     "description": "Tracker category name"
+  },
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "Atualizamos os Termos e Condições. Para continuar usando o Ghostery Tracker & Ad Blocker durante a navegação, renove a configuração."
   },
   "welcome_to_ghostery": {
     "message": "Bem-vindo ao Ghostery"
@@ -1923,5 +1951,26 @@
   },
   "your_privacy_features_": {
     "message": "Seus recursos de privacidade:"
-  }
+	},
+	"account_details": {
+		"message": "Detalhes da conta"
+	},
+	"contributor": {
+		"message": "Colaborador"
+	},
+	"help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
+		"message": "Ajude o Ghostery a lutar por uma web onde a privacidade é um direito humano básico."
+	},
+	"join_ghostery": {
+		"message": "Junte-se ao Ghostery"
+	},
+	"save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
+		"message": "Salve e sincronize suas configurações personalizadas entre navegadores e dispositivos."
+	},
+	"settings_sync": {
+		"message": "Configurações de sincronização"
+	},
+	"you_are_signed_in_as_": {
+		"message": "Você entrou como:"
+	}
 }
