--- a/extension-manifest-v2/_locales/ru/messages.json
+++ b/extension-manifest-v2/_locales/ru/messages.json
@@ -22,17 +22,11 @@
       }
     }
   },
-  "ad": {
-    "message": "реклама"
-  },
   "ad_blocking": {
     "message": "Блокировка рекламы"
   },
   "additional_permissions_required": {
     "message": "Требуются дополнительные разрешения"
-  },
-  "ads": {
-    "message": "рекламы"
   },
   "ads___onboarding": {
     "message": "Рекламы"
@@ -93,6 +87,9 @@
   "all_popups": {
     "message": "Все всплывающие окна"
   },
+  "allowed": {
+    "message": "Разрешено"
+  },
   "already_subscribed": {
     "message": "Уже подписаны"
   },
@@ -148,7 +145,7 @@
     "message": "Вы уверены?"
   },
   "are_you_sure_you_want_to_disable_trackers_preview_": {
-    "message": "Are you sure you want to disable Trackers Preview?"
+    "message": "Отключить функцию Trackers Preview?"
   },
   "are_you_sure_you_want_to_keep_ghostery_disabled_": {
     "message": "Не включать расширение Ghostery?"
@@ -262,21 +259,12 @@
     "description": "as in '5 (trackers) BLOCKED'",
     "message": "Заблокированные"
   },
-  "blocking_category_tracker": {
-    "message": "Трекер"
-  },
   "blocking_category_tracker_found": {
     "message": "Найдено"
-  },
-  "blocking_category_trackers": {
-    "message": "Трекеры"
   },
   "blocking_category_whitelisted": {
     "description": "as in '5 (trackers) TRUSTED'",
     "message": "Доверенный"
-  },
-  "blocking_trackers": {
-    "message": "Трекеры"
   },
   "blocking_unblock_all": {
     "message": "Разблокировать все"
@@ -389,9 +377,6 @@
   },
   "box_trackers": {
     "message": "Трекеры"
-  },
-  "box_warning_compatibility": {
-    "message": "Трекеры поврежденной страницы"
   },
   "box_warning_nonsecure": {
     "message": "Небезопасные трекеры"
@@ -537,7 +522,7 @@
   },
   "category_telemetry_desc": {
     "description": "User-facing description for the Telemetry tag category.",
-    "message": "Телеметрия"
+    "message": "Собирается информация о взаимодействии с пользователем, отчеты об ошибках и активности. Данные используются для улучшения продуктов и передаются третьим сторонам."
   },
   "category_unidentified": {
     "message": "Без категории"
@@ -677,11 +662,17 @@
   "customize_setup": {
     "message": "Пользовательская настройка"
   },
+  "days": {
+    "message": "дни"
+  },
   "detailed_view": {
     "message": "Детальный просмотр"
   },
   "disable": {
-    "message": "Disable"
+    "message": "Отключить"
+  },
+  "disable_ghostery": {
+    "message": "Отключить Ghostery"
   },
   "disable_trackers_preview": {
     "message": "Отключить предварительный просмотр трекеров"
@@ -719,6 +710,9 @@
   },
   "enable_never_consent_": {
     "message": "Активировать функцию Never-Consent?"
+  },
+  "enable_new_setup": {
+    "message": "Включить новую настройку"
   },
   "enable_when_blacklisted": {
     "message": "Для использования этой функции отмените включение сайта в список ограниченных"
@@ -779,6 +773,9 @@
   "full_coverage_protection_promise": {
     "message": "Получите полную защиту во всех браузерах и приложениях на вашем устройстве"
   },
+  "ghostery__action_required": {
+    "message": "Ghostery: необходимо выполнить действие"
+  },
   "ghostery_basic": {
     "message": "Базовый"
   },
@@ -807,13 +804,16 @@
     "message": "Политика конфиденциальности Ghostery"
   },
   "ghostery_settings": {
-    "message": "Ghostery settings"
+    "message": "Настройки Ghostery"
   },
   "ghostery_stops_trackers_in_their_tracks_and_prevents_you_from_being_profiled_by_data_brokers_": {
     "message": "Ghostery блокирует трекеры и защищает ваши данные от брокеров."
   },
   "ghostery_will_show_how_many_trackers_were_blocked_on_a_page__clicking_on_the_ghostery_icon_reveals_more_detailed_information_": {
     "message": "Ghostery будет показывать количество трекеров, заблокированных на странице. Чтобы посмотреть более подробную статистику, нажмите на значок расширения."
+  },
+  "ghostery_will_stop_working_in_": {
+    "message": "Ghostery перестанет работать здесь:"
   },
   "global_settings_saved": {
     "message": "Глобальные настройки сохранены"
@@ -836,6 +836,9 @@
   "hosting": {
     "message": "Хостинг",
     "description": "Tracker category name"
+  },
+  "hours": {
+    "message": "часы"
   },
   "ignore": {
     "message": "Игнорировать"
@@ -901,11 +904,14 @@
     "message": "Url-адрес"
   },
   "mind_that_not_all_listed_entities_are_trackers__that_is_not_all_of_them_collect_personal_data": {
-    "message": "Mind that not all listed entities are trackers, that is not all of them collect personal data"
+    "message": "Учитывайте, что не все перечисленные объекты являются трекерами и собирают персональные данные."
   },
   "miscellaneous": {
     "message": "Разное",
     "description": "Tracker category name"
+  },
+  "modified": {
+    "message": "Изменено"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "Дополнительная информация о методологии $${0} в Декларации Ghostery."
@@ -942,7 +948,7 @@
     "message": "Нет, спасибо, продолжить с базовым"
   },
   "no_trackers_detected": {
-    "message": "No trackers detected"
+    "message": "Трекеры не обнаружены"
   },
   "none": {
     "description": "Used to say that this item does not belong to any of the groups, as in \"Groups: None\" (as opposed to \"Groups: Group A, Group B, Group C\").",
@@ -971,6 +977,12 @@
   },
   "options_tracker_wheel_disabled": {
     "message": "Отключить Tracker Wheel на панели инструментов браузера"
+  },
+  "organization": {
+    "message": "Организация"
+  },
+  "organizations": {
+    "message": "Организации"
   },
   "page_load": {
     "message": "Загрузка страницы"
@@ -1186,7 +1198,7 @@
     "message": " повреждают страницу."
   },
   "panel_tracker_found_sources_title": {
-    "message": "Найденные URL-адреса трекера:"
+    "message": "Обнаруженные URL-адреса:"
   },
   "panel_tracker_restrict_tooltip": {
     "message": "Запретить на этом сайте"
@@ -1215,9 +1227,6 @@
   },
   "panel_tracker_trust_tooltip": {
     "message": "Разрешить на этом сайте"
-  },
-  "panel_tracker_warning_compatibility_tooltip": {
-    "message": "Заблокированный трекер повреждает страницу"
   },
   "panel_tracker_warning_nonsecure_tooltip": {
     "message": "Трекер небезопасный"
@@ -1328,17 +1337,20 @@
     "message": "Промоакции отключены. Вы можете снова подключить их в",
     "description": "translation must take into account that 'Settings' is appended to this string"
   },
+  "protection_disabled": {
+    "message": "Защита отключена"
+  },
   "recommended": {
     "message": "Рекомендуемый"
   },
   "refresh_and_try_again": {
     "message": "Обновите страницу и повторите попытку"
   },
-  "requests_modified": {
-    "message": "Запросы изменены:"
+  "renew_ghostery_for_full_protection": {
+    "message": "обновите GHOSTERY, чтобы добиться полной защиты"
   },
-  "requests_modified_tooltip": {
-    "message": "Общее количество запросов на отслеживание и элементов, измененных программами анти-трекинга и блокировки рекламы"
+  "renew_setup": {
+    "message": "Обновить настройки"
   },
   "select_basic": {
     "message": "Выбрать базовый"
@@ -1835,6 +1847,9 @@
   "tooltip_trust_on": {
     "message": "На сайте трекеры разрешены и анти-трекинг отключен. Нажмите, чтобы отменить."
   },
+  "tracker_database": {
+    "message": "База данных трекера"
+  },
   "tracker_description_getting": {
     "message": "Получение описания трекера..."
   },
@@ -1859,8 +1874,17 @@
   "trackers_detected_by_ghostery_on_this_website__nbsp_@_0_": {
     "message": "Трекеры, обнаруженные Ghostery на этом сайте:&nbsp;$${0}"
   },
+  "trackers_modified": {
+    "message": "Измененные трекеры:"
+  },
   "trackers_preview": {
     "message": "Предварительный просмотр трекеров"
+  },
+  "tracking_not_detected": {
+    "message": "Отслеживание не обнаружено"
+  },
+  "trusted": {
+    "message": "Доверенный"
   },
   "try_ghostery_midnight": {
     "message": "Попробовать Ghostery Midnight"
@@ -1869,7 +1893,8 @@
     "message": "разблокированные трeкеры"
   },
   "unidentified": {
-    "message": "Неизвестно"
+    "message": "Неизвестно",
+    "description": "Tracker category name"
   },
   "unidentified_description": {
     "message": "Неизвестные трекеры, очищенные анти-трекингом"
@@ -1877,6 +1902,9 @@
   "unknown": {
     "message": "Неизвестный",
     "description": "Tracker category name"
+  },
+  "we_have_updated_terms___conditions__to_continue_using_the_ghostery_tracker___ad_blocker_while_browsing__please_renew_the_setup_": {
+    "message": "Мы обновили Условия и положения. Чтобы и дальше использовать Ghostery Tracker & Ad Blocker для просмотра веб-страниц, обновите настройки."
   },
   "welcome_to_ghostery": {
     "message": "Добро пожаловать в Ghostery"
@@ -1901,7 +1929,7 @@
     "message": "WhoTracks.Me, управляемый Ghostery, является неотъемлемой частью технологии Ghostery ИИ, предотвращающей отслеживание. Это наиболее полный глобальный ресурс по трекерам, обеспечивающий прозрачность отслеживания."
   },
   "whotracks_me_statistical_report": {
-    "message": "WhoTracks.Me Statistical Report"
+    "message": "Статистический отчет WhoTracks.Me"
   },
   "yes": {
     "message": "Да"
@@ -1916,12 +1944,33 @@
     "message": "Все готово, пользователь Ghostery!"
   },
   "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
-    "message": "You will no longer see tracker wheels next to the search results."
+    "message": "Вы больше не будете видеть статистику трекера рядом с результатами поиска."
   },
   "your_email_do_not_match": {
     "message": "Адреса вашей электронной почты не совпадают."
   },
   "your_privacy_features_": {
     "message": "Ваши функции защиты конфиденциальности:"
-  }
+	},
+	"account_details": {
+		"message": "Данные аккаунта"
+	},
+	"contributor": {
+		"message": "Участник"
+	},
+	"help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
+		"message": "Помогите Ghostery в борьбе за конфиденциальность как за основное право человека."
+	},
+	"join_ghostery": {
+		"message": "Присоединяйтесь к Ghostery"
+	},
+	"save_and_synchronize_your_custom_settings_between_browsers_and_devices_": {
+		"message": "Сохраняйте свои настройки и синхронизируйте их между браузерами и устройствами."
+	},
+	"settings_sync": {
+		"message": "Синхронизация настроек"
+	},
+	"you_are_signed_in_as_": {
+		"message": "Вы вошли как:"
+	}
 }
